--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+
+
+<style>
 body {
     margin: 60px auto;
     width: 70%;
@@ -14,7 +17,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: green;
 }
 a:hover {
     text-decoration: underline;
@@ -26,7 +29,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    color: green;
 }
 footer {
     border-top: 1px solid #d5d5d5;
@@ -41,3 +44,5 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+
