--- a/_site copy/css/main.css
+++ b/_site copy/css/main.css
@@ -49,7 +49,7 @@ a:hover {
 
 
 .body{
-    background-image:url("https://dynaimage.cdn.cnn.com/cnn/q_auto,w_1100,c_fill,g_auto,h_619,ar_16:9/http%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F171219175320-shanti1.jpg")
+    background-image:url("https://farm1.staticflickr.com/841/28425844277_ba4f0e153e_o.jpg");
 }
 .hi{
     font-size: 3em;
