--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,8 @@ h1{
     height:10%;
 }
 
+/*original:913x181*/
+
 @keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
@@ -100,44 +102,45 @@ h1{
 
 @media screen and (max-width: 340px) {
     img{  
-        width:200px;
-        height:85px;  
+        width:340px;
+        height:90px;  
   }
 }
-        
+ 
+/*375x667*/
 @media screen and (max-width: 375px) {
     img{
-        width:;
-        height:
+        width:375px;
+        height:100px;
   }
 }
 
    
 @media screen and (max-width: 1024px) {
     img{
-        width:;
-        height:;
+        width:1024px;
+        height:200px;
   }
 }
   
  @media screen and (max-width: 1440px) {
     img{
-        width:;
-        height:;
+        width:1440px;
+        height:250px;
   }
 }
   
 @media screen and (max-width: 1680px) {
     img{
-        width:;
-        height:;
+        width:1680px;
+        height:300px;
   }
 }
     
 @media screen and (max-width: 1920px) {
     img{
-        width:;
-        height:;
+        width:1920px;
+        height:350px;
   }
 }
   
