--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-<style>
 
 body {
     background-color:white;
@@ -92,7 +91,7 @@ h1{
     height:10%;
 }
 
-/*original:913x181*/
+
 
 @keyframes fadeIn {
    0% {opacity: 0;}
@@ -100,48 +99,55 @@ h1{
 } 
 
 
-@media screen and (max-width: 340px) {
-    img{  
-        width:340px;
-        height:90px;  
-  }
-}
- 
-/*375x667*/
-@media screen and (max-width: 375px) {
+@media screen and (min-width : 40px) and (max-width : 340px) {
     img{
-        width:375px;
+        width:200px;
+        height:90px;
+    }
+
+}
+@media screen and (min-width : 341px) and (max-width : 380px) {
+    img{
+        width:300px;
         height:100px;
-  }
+    }   
 }
 
-   
-@media screen and (max-width: 1024px) {
+
+@media screen and (min-width : 381px) and (max-width : 400px) {
     img{
-        width:1024px;
-        height:200px;
-  }
+        width:350px;
+        height:120px;
+    }
 }
-  
- @media screen and (max-width: 1440px) {
+
+@media screen and (min-width : 401px) and (max-width : 1140px) {
     img{
-        width:1440px;
+        width:1000px;
         height:250px;
-  }
+    }
 }
-  
-@media screen and (max-width: 1680px) {
+
+
+@media screen and (min-width : 1141px) and (max-width : 1440px) {
+    img{
+        width:1400px;
+        height:300px;
+    }
+}
+
+@media screen and (min-width : 1441px) and (max-width : 1700px) {
     img{
         width:1680px;
-        height:300px;
-  }
+        height:350px;
+    }
 }
-    
-@media screen and (max-width: 1920px) {
+
+@media screen and (min-width : 1701px) and (max-width : 2000px) {
     img{
         width:1920px;
         height:350px;
-  }
+    }
 }
-  
+
 
